# mitlm

./: .appveyor.yml  .project  .travis.yml  AUTHORS  COPYING  ChangeLog  EstimateNgram.md  EstimateNgramV01.md  EvaluateNgram.md  EvaluateNgramV01.md  InterpolateNgram.md  InterpolateNgramV01.md  LICENSE  Makefile  Makefile.am  ProjectHome.md  README  Tutorial.md  autogen.sh  configure.ac  evaluate-ngram
debian/: control  copyright
src/: InterpolatedNgramLM.cpp  InterpolatedNgramLM.h  KneserNeySmoothing.cpp  KneserNeySmoothing.h  Lattice.cpp  Lattice.h  MaxLikelihoodSmoothing.cpp  NgramLM.cpp  NgramLM.h  NgramModel.cpp  NgramModel.h  NgramVector.cpp  NgramVector.h  PerplexityOptimizer.cpp  PerplexityOptimizer.h  Smoothing.cpp  Smoothing.h  Types.h  Vocab.cpp  Vocab.h  WordErrorRateOptimizer.cpp  WordErrorRateOptimizer.h  estimate-ngram.cpp  evaluate-ngram.cpp  interpolate-ngram.cpp
src/optimize/: LBFGS.h  LBFGSB.h  Optimization.h  Powell.h  fortran_wrapper.c  lbfgs.f  lbfgsb.f
src/util/: BitOps.h  CommandOptions.cpp  CommandOptions.h  FastHash.h  FastIO.h  Logger.cpp  Logger.h  RefCounter.cpp  RefCounter.h  SharedPtr.h  ZFile.h  constants.h
src/vector/: DenseVector.tcc  Operations.h  Scalar.h  Vector.h  VectorBuilder.h  VectorClosures.h  VectorOps.h
test/: Timer.h  VectorTest.cpp  VectorTimeTest.cpp
tests/: test1.test.in
tests/data/test1_ref/: wc.a.hyp  wec.a.hyp  wec.b.hyp  wl.a.hyp  wl.b.hyp  wlc.b.hyp  wrc.a.hyp
trunk/: .cproject  ChangeLog  Makefile  Makefile.am  Makefile.example  README  configure.ac
trunk/debian/: changelog  libmitlm-dev.install  libmitlm.install  mitlm.install  rules
trunk/src/: InterpolatedNgramLM.cpp  InterpolatedNgramLM.h  KneserNeySmoothing.cpp  Lattice.h  Mask.h  MaxLikelihoodSmoothing.cpp  MaxLikelihoodSmoothing.h  NgramLM.cpp  NgramLM.h  NgramModel.cpp  NgramModel.h  NgramPerplexity.cpp  NgramPerplexity.h  NgramVector.cpp  NgramVector.h  PerplexityOptimizer.cpp  PerplexityOptimizer.h  Smoothing.h  Types.h  Vocab.cpp  Vocab.h  WordErrorRateOptimizer.cpp  WordErrorRateOptimizer.h  estimate-ngram.cpp  evaluate-ngram.cpp  interpolate-ngram.cpp
trunk/src/optimize/: LBFGS.h  LBFGSB.h  Powell.h  fortran_wrapper.c  lbfgs.f  lbfgsb.f
trunk/src/util/: BitOps.h  CommandOptions.cpp  CommandOptions.h  FastHash.h  FastIO.h  Logger.cpp  Logger.h  RefCounter.cpp  RefCounter.h  SharedPtr.h  ZFile.h
trunk/src/vector/: DenseVector.h  DenseVector.tcc  Operations.h  Range.h  Scalar.h  Traits.h  Vector.h  VectorClosures.h  VectorOps.h
trunk/test/: TestMITLM.cpp  Timer.h  VectorTimeTest.cpp
trunk/tests/: test1.test
trunk/tests/data/: small.txt
trunk/tests/data/test1_ref/: wlc.a.hyp  wrc.b.hyp
wiki/: EstimateNgram.wiki  EvaluateNgram.wiki  InterpolateNgram.wiki  InterpolateNgramV02.wiki  Tutorial.wiki
